# UniProger

./: CMakeLists.txt  README.md  rp2040_prog_analyzer_webui.html  uniproger.md  universal-programmer.jsx
firmware/: CMakeLists.txt
firmware/include/: bridge_protocol.h  tusb_config.h
firmware/include/uniproger/: types.h
firmware/src/: bridge_protocol.c  executor_gpio.c  executor_i2c.c  executor_spi.c  executor_sys.c  main.c  usb_descriptors.c
include/uniproger/: config.h  version.h
server/: index.js  package-lock.json  package.json
server/handlers/: avr-isp.js  i2c-eeprom.js  spi-flash.js  stm32-swd.js
src/: main.c
src/cli/: cli.c  cli.h  commands.c
src/core/buffer/: buffer.c  buffer.h
src/core/device/: device.h  device_registry.c
src/core/device/mcu/: avr_isp.c  stm32_swd.c
src/core/device/memory/: i2c_eeprom.c  spi_flash.c
src/core/hal/: hal.h  hal_gpio.h  hal_i2c.h  hal_pio.h  hal_spi.h  hal_timer.h  hal_uart.h
src/core/protocol/: i2c_protocol.c  jtag_protocol.c  onewire_protocol.c  protocol.h  spi_protocol.c  swd_protocol.c  uart_protocol.c
src/core/utils/: crc.c  crc.h  log.c  log.h
src/platform/rp2040/: CMakeLists.txt  rp2040_hal_gpio.c  rp2040_hal_i2c.c  rp2040_hal_pio.c  rp2040_hal_spi.c  rp2040_hal_timer.c  rp2040_hal_uart.c  rp2040_pins.h  rp2040_platform.c
src/platform/rp2040/pio/: jtag.pio  swd.pio
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  index.css
web/src/components/: ConnectModal.jsx  Sidebar.jsx  StatusBar.jsx
web/src/components/ui/: index.jsx
web/src/data/: chips.json  protocols.js
web/src/lib/: protocol.js  webserial.js  websocket.js
web/src/views/: ChipDatabase.jsx  Dashboard.jsx  FirmwareUpdate.jsx  HexEditor.jsx  Operations.jsx  ProtocolAnalyzer.jsx  Settings.jsx
